--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" href="%PUBLIC_URL%/index.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -15,7 +14,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Boilerplate</title>
+    <title>Example Application</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
